@@ -1,83 +1,105 @@
-# $NetBSD: buildlink2.mk,v 1.6 2004/01/03 18:49:45 reed Exp $
+# $NetBSD: buildlink2.mk,v 1.7 2004/01/14 07:27:51 xtraeme Exp $
+#
+# This Makefile fragment is included by packages that use evolution.
+#
+# This file was created automatically using createbuildlink 2.9.
 #
 
 .if !defined(EVOLUTION_BUILDLINK2_MK)
 EVOLUTION_BUILDLINK2_MK=	# defined
 
 BUILDLINK_PACKAGES+=			evolution
-BUILDLINK_DEPENDS.evolution?=		evolution>=1.2.4nb6
+BUILDLINK_DEPENDS.evolution?=		evolution>=1.4.5nb1
 BUILDLINK_PKGSRCDIR.evolution?=		../../mail/evolution
 
 EVAL_PREFIX+=	BUILDLINK_PREFIX.evolution=evolution
-BUILDLINK_PREFIX.evolution_DEFAULT=	${X11PREFIX}
-BUILDLINK_FILES.evolution+=	include/camel/*.h
-BUILDLINK_FILES.evolution+=	include/camel/camel-exception-list.def
-BUILDLINK_FILES.evolution+=	include/ename/e-address-western.h
-BUILDLINK_FILES.evolution+=	include/ename/e-name-western-tables.h
-BUILDLINK_FILES.evolution+=	include/ename/e-name-western.h
-BUILDLINK_FILES.evolution+=	include/evolution/cal-client/*.h
-BUILDLINK_FILES.evolution+=	include/evolution/cal-util/*.h
-BUILDLINK_FILES.evolution+=	include/evolution/ebook/*.h
-BUILDLINK_FILES.evolution+=	include/evolution/ical.h
-BUILDLINK_FILES.evolution+=	include/evolution/importer/*.h
-BUILDLINK_FILES.evolution+=	include/evolution/shell/*.h
-BUILDLINK_FILES.evolution+=	include/evolution/wombat/wombat-client.h
-BUILDLINK_FILES.evolution+=	lib/evolution/camel-providers/1.0/libcamelimap.*
-BUILDLINK_FILES.evolution+=	lib/evolution/camel-providers/1.0/libcamelimap.urls
-BUILDLINK_FILES.evolution+=	lib/evolution/camel-providers/1.0/libcamellocal.*
-BUILDLINK_FILES.evolution+=	lib/evolution/camel-providers/1.0/libcamellocal.urls
-BUILDLINK_FILES.evolution+=	lib/evolution/camel-providers/1.0/libcamelnntp.*
-BUILDLINK_FILES.evolution+=	lib/evolution/camel-providers/1.0/libcamelnntp.urls
-BUILDLINK_FILES.evolution+=	lib/evolution/camel-providers/1.0/libcamelpop3.*
-BUILDLINK_FILES.evolution+=	lib/evolution/camel-providers/1.0/libcamelpop3.urls
-BUILDLINK_FILES.evolution+=	lib/evolution/camel-providers/1.0/libcamelsendmail.*
-BUILDLINK_FILES.evolution+=	lib/evolution/camel-providers/1.0/libcamelsendmail.urls
-BUILDLINK_FILES.evolution+=	lib/evolution/camel-providers/1.0/libcamelsmtp.*
-BUILDLINK_FILES.evolution+=	lib/evolution/camel-providers/1.0/libcamelsmtp.urls
-BUILDLINK_FILES.evolution+=	lib/evolution/evolution-mail-importers/${PKGVERSION}/libmbox.*
-BUILDLINK_FILES.evolution+=	lib/evolution/evolution-mail-importers/${PKGVERSION}/liboutlook.*
-BUILDLINK_FILES.evolution+=	lib/libcal-client.*
-BUILDLINK_FILES.evolution+=	lib/libcal-util.*
-BUILDLINK_FILES.evolution+=	lib/libcamel.*
-BUILDLINK_FILES.evolution+=	lib/libebook.*
-BUILDLINK_FILES.evolution+=	lib/libename.*
-BUILDLINK_FILES.evolution+=	lib/libeselectnames.*
-BUILDLINK_FILES.evolution+=	lib/libeshell.*
-BUILDLINK_FILES.evolution+=	lib/libevolution-importer.*
-BUILDLINK_FILES.evolution+=	lib/libical-evolution.*
-BUILDLINK_FILES.evolution+=	lib/libwombat.*
-BUILDLINK_FILES.evolution+=	share/idl/Composer.idl
-BUILDLINK_FILES.evolution+=	share/idl/Evolution-Activity.idl
-BUILDLINK_FILES.evolution+=	share/idl/Evolution-Composer.idl
-BUILDLINK_FILES.evolution+=	share/idl/Evolution-Offline.idl
-BUILDLINK_FILES.evolution+=	share/idl/Evolution-Session.idl
-BUILDLINK_FILES.evolution+=	share/idl/Evolution-Shell.idl
-BUILDLINK_FILES.evolution+=	share/idl/Evolution-ShellComponent.idl
-BUILDLINK_FILES.evolution+=	share/idl/Evolution-ShellComponentDnd.idl
-BUILDLINK_FILES.evolution+=	share/idl/Evolution-ShellView.idl
-BUILDLINK_FILES.evolution+=	share/idl/Evolution-Shortcuts.idl
-BUILDLINK_FILES.evolution+=	share/idl/Evolution-Storage.idl
-BUILDLINK_FILES.evolution+=	share/idl/Evolution-StorageSetView.idl
-BUILDLINK_FILES.evolution+=	share/idl/Evolution-Wizard.idl
-BUILDLINK_FILES.evolution+=	share/idl/Evolution-common.idl
-BUILDLINK_FILES.evolution+=	share/idl/Evolution.idl
-BUILDLINK_FILES.evolution+=	share/idl/GNOME_Evolution_Importer.idl
-BUILDLINK_FILES.evolution+=	share/idl/addressbook.idl
-BUILDLINK_FILES.evolution+=	share/idl/evolution-calendar.idl
+BUILDLINK_PREFIX.evolution_DEFAULT=	${LOCALBASE}
+BUILDLINK_FILES.evolution+=	include/evolution-1.4/cal-client/*.h
+BUILDLINK_FILES.evolution+=	include/evolution-1.4/cal-util/*.h
+BUILDLINK_FILES.evolution+=	include/evolution-1.4/camel/*.h
+BUILDLINK_FILES.evolution+=	include/evolution-1.4/e-conduit/*.h
+BUILDLINK_FILES.evolution+=	include/evolution-1.4/e-db3util/*.h
+BUILDLINK_FILES.evolution+=	include/evolution-1.4/e-util/*.h
+BUILDLINK_FILES.evolution+=	include/evolution-1.4/ebook/*.h
+BUILDLINK_FILES.evolution+=	include/evolution-1.4/ename/*.h
+BUILDLINK_FILES.evolution+=	include/evolution-1.4/*.h
+BUILDLINK_FILES.evolution+=	include/evolution-1.4/importer/*.h
+BUILDLINK_FILES.evolution+=	include/evolution-1.4/pas/*.h
+BUILDLINK_FILES.evolution+=	include/evolution-1.4/pcs/*.h
+BUILDLINK_FILES.evolution+=	include/evolution-1.4/shell/*.h
+BUILDLINK_FILES.evolution+=	include/evolution-1.4/widgets/*.h
+BUILDLINK_FILES.evolution+=	lib/bonobo/servers/GNOME_Evolution_Addressbook.server
+BUILDLINK_FILES.evolution+=	lib/bonobo/servers/GNOME_Evolution_Addressbook_LDIF_Importer.server
+BUILDLINK_FILES.evolution+=	lib/bonobo/servers/GNOME_Evolution_Addressbook_SelectNames.server
+BUILDLINK_FILES.evolution+=	lib/bonobo/servers/GNOME_Evolution_Addressbook_VCard_Importer.server
+BUILDLINK_FILES.evolution+=	lib/bonobo/servers/GNOME_Evolution_Calendar.server
+BUILDLINK_FILES.evolution+=	lib/bonobo/servers/GNOME_Evolution_Calendar_AlarmNotify.server
+BUILDLINK_FILES.evolution+=	lib/bonobo/servers/GNOME_Evolution_Calendar_Importer.server
+BUILDLINK_FILES.evolution+=	lib/bonobo/servers/GNOME_Evolution_Mail.server
+BUILDLINK_FILES.evolution+=	lib/bonobo/servers/GNOME_Evolution_Mail_Elm_Intelligent_Importer.server
+BUILDLINK_FILES.evolution+=	lib/bonobo/servers/GNOME_Evolution_Mail_Mbox_Importer.server
+BUILDLINK_FILES.evolution+=	lib/bonobo/servers/GNOME_Evolution_Mail_Netscape_Intelligent_Importer.server
+BUILDLINK_FILES.evolution+=	lib/bonobo/servers/GNOME_Evolution_Mail_Outlook_Importer.server
+BUILDLINK_FILES.evolution+=	lib/bonobo/servers/GNOME_Evolution_Mail_Pine_Intelligent_Importer.server
+BUILDLINK_FILES.evolution+=	lib/bonobo/servers/GNOME_Evolution_Shell.server
+BUILDLINK_FILES.evolution+=	lib/bonobo/servers/GNOME_Evolution_Summary.server
+BUILDLINK_FILES.evolution+=	lib/bonobo/servers/GNOME_Evolution_Wombat.server
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/camel-providers/libcamelimap.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/camel-providers/libcamelimap.urls
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/camel-providers/libcamellocal.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/camel-providers/libcamellocal.urls
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/camel-providers/libcamelpop3.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/camel-providers/libcamelpop3.urls
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/camel-providers/libcamelsendmail.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/camel-providers/libcamelsendmail.urls
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/camel-providers/libcamelsmtp.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/camel-providers/libcamelsmtp.urls
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/components/libevolution-addressbook.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/components/libevolution-calendar.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/components/libevolution-executive-summary.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/components/libevolution-mail.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/evolution-calendar-importers/libevolution-calendar-importers.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/evolution-mail-importers/libevolution-elm-importer.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/evolution-mail-importers/libevolution-netscape-importer.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/evolution-mail-importers/libevolution-pine-importer.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/evolution-mail-importers/libmbox.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/evolution-mail-importers/liboutlook.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libcal-client.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libcal-util-static.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libcal-util.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libcamel.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libebook-static.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libebook.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libeconduit.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libedb3util.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libemiscwidgets.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libename.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libeshell.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libetimezonedialog.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libeutil.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libevolution-importer.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libical-evolution.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libicalvcal-evolution.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libmenus.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libpas.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libpcs.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libversit.*
+BUILDLINK_FILES.evolution+=	lib/evolution/1.4/libwombat.*
 
-.include "../../textproc/libunicode/buildlink2.mk"
-.include "../../sysutils/gnome-vfs/buildlink2.mk"
-.include "../../devel/gettext-lib/buildlink2.mk"
-.include "../../print/gnome-print/buildlink2.mk"
-.include "../../security/openssl/buildlink2.mk"
 .include "../../databases/db3/buildlink2.mk"
 .include "../../databases/openldap/buildlink2.mk"
-.include "../../www/gtkhtml/buildlink2.mk"
-.include "../../devel/bonobo/buildlink2.mk"
-.include "../../devel/bonobo-conf/buildlink2.mk"
-.include "../../devel/oaf/buildlink2.mk"
-.include "../../devel/gal/buildlink2.mk"
-.include "../../net/ORBit/buildlink2.mk"
+.include "../../devel/gettext-lib/buildlink2.mk"
+.include "../../devel/gal2/buildlink2.mk"
+.include "../../devel/libbonoboui/buildlink2.mk"
+.include "../../devel/libglade2/buildlink2.mk"
+.include "../../devel/libgnomeui/buildlink2.mk"
+.include "../../graphics/libgnomecanvas/buildlink2.mk"
+.include "../../print/libgnomeprint/buildlink2.mk"
+.include "../../security/openssl/buildlink2.mk"
+.include "../../sysutils/gnome-vfs2/buildlink2.mk"
+.include "../../textproc/libxml2/buildlink2.mk"
+.include "../../textproc/libunicode/buildlink2.mk"
+.include "../../www/gtkhtml3/buildlink2.mk"
 
 BUILDLINK_TARGETS+=	evolution-buildlink
 
